完成初始项目代码搭建和验收