@@ -5,6 +5,7 @@ import org.junit.jupiter.api.Test;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -12,7 +13,7 @@ class DocxExtractorTest {
 
     @Test
     void extractsDocxToTempDirectory() throws Exception {
-        try (var builder = new TestDocxBuilder()) {
+        try (TestDocxBuilder builder = new TestDocxBuilder()) {
             builder.addContentTypes().addRels()
                     .addDocument("<w:p><w:r><w:t>Hello</w:t></w:r></w:p>");
             Path docxPath = builder.build();
@@ -21,7 +22,7 @@ class DocxExtractorTest {
             try {
                 assertTrue(Files.isDirectory(extracted));
                 assertTrue(Files.exists(extracted.resolve("word/document.xml")));
-                String content = Files.readString(extracted.resolve("word/document.xml"));
+                String content = cn.p4u.smart.util.Jdk8Helpers.readString(extracted.resolve("word/document.xml"));
                 assertTrue(content.contains("Hello"));
             } finally {
                 DocxExtractor.cleanup(extracted);
@@ -32,12 +33,12 @@ class DocxExtractorTest {
     @Test
     void throwsForInvalidFile() {
         assertThrows(cn.p4u.smart.DocxConversionException.class,
-                () -> DocxExtractor.extract(Path.of("nonexistent.docx")));
+                () -> DocxExtractor.extract(Paths.get("nonexistent.docx")));
     }
 
     @Test
     void cleanupRemovesDirectory() throws Exception {
-        try (var builder = new TestDocxBuilder()) {
+        try (TestDocxBuilder builder = new TestDocxBuilder()) {
             builder.addContentTypes().addRels()
                     .addDocument("<w:p><w:r><w:t>Test</w:t></w:r></w:p>");
             Path docxPath = builder.build();
